--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.25",
+    "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "pdfjs-dist": "^5.4.449",
     "react": "19.2.0",
